WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
265936
[web-animations] accelerated CSS Animation should not schedule animation resolution at iteration boundary if no CSS Animation event listener was registered (affects reddit.com)
https://bugs.webkit.org/show_bug.cgi?id=265936
Summary
[web-animations] accelerated CSS Animation should not schedule animation reso...
Antoine Quint
Reported
2023-12-06 02:30:58 PST
If a CSS Animation is accelerated it will currently schedule animation resolution when its current iteration ends in order to dispatch an `animationiteration` event. However, it's likely that the content does not listen to such events and so we could avoid scheduling animation resolution in this case. This affects reddit.com which chews some CPU scheduling animation frames once every second for an infinitely-repetitive animation that lasts 1 second.
Attachments
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2023-12-06 02:31:15 PST
<
rdar://problem/119244430
>
Antoine Quint
Comment 2
2023-12-06 02:38:16 PST
Pull request:
https://github.com/WebKit/WebKit/pull/21385
EWS
Comment 3
2023-12-06 05:57:54 PST
Committed
271604@main
(4a38bbbd7547): <
https://commits.webkit.org/271604@main
> Reviewed commits have been landed. Closing PR #21385 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug